# 2023WinterHomework

./: .gitignore  CMakeLists.txt  demo_absdiff.py  demo_final.py  demo_hough.py  generator.py  judge.py  main.cpp  main.py  paint_line_if_color.py  requirements.txt  test.py
answers/: result.json
backend/: commit.py  config.py  depends.py  generator.py  host.py  judge.py  lobby.py  main.py  scoreHelper.py  task.py  timedStorage.py
client/app/: .gitignore  README.MD  build.sh  config.py  main.py  moveStatic.sh  requirements.txt  updater.py
client/app/app/: app.py  buildApp.sh  draw.py  exec.py  generator.py  judge.py  online.py  procExec.py
client/app/app/static/: index.html
client/app/app/static/static/css/: main.d666d067.css  main.d666d067.css.map
client/app/app/static/static/js/: main.6229c4d2.js  main.6229c4d2.js.map  main.65d7c524.js  main.65d7c524.js.map  main.70a248cb.js  main.70a248cb.js.map  main.7a32f806.js  main.7a32f806.js.map  main.a99bc37d.js  main.a99bc37d.js.map  main.de4603c1.js  main.de4603c1.js.map  main.f71924aa.js  (+3 more)
client/app/static/: index.html
client/app/static/static/css/: main.3bb93612.css  main.3bb93612.css.map
client/app/static/static/js/: main.c22cdbc6.js  main.c22cdbc6.js.map  main.df2a6b17.js  main.df2a6b17.js.map
client/web/app/public/: font.css  index.html
client/web/app/src/: App.js  border.css  local.js  online.js  picture.js  utils.js
client/web/updater/public/: index.html
client/web/updater/src/: App.css  App.js
doc/: 任务书.docx
identify/: .gitignore  CMakeLists.txt  main.cpp
identify_bismarck/: main.cpp
